--- a/vue-zhihu/package.json
+++ b/vue-zhihu/package.json
@@ -12,6 +12,8 @@
     "test": "npm run unit"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "element-ui": "^1.3.7",
     "mint-ui": "^2.2.7",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
