Add component of longComment

--- a/vue-zhihu/package.json
+++ b/vue-zhihu/package.json
@@ -64,6 +64,7 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.3.4",
+    "vue-particles": "^1.0.9",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
     "vuex": "^2.3.1",
