--- a/vue-zhihu/package.json
+++ b/vue-zhihu/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.16.2",
     "element-ui": "^1.3.7",
     "mint-ui": "^2.2.7",
+    "moment": "^2.18.1",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
