--- a/vue-zhihu/package.json
+++ b/vue-zhihu/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "better-scroll": "^1.2.2",
     "element-ui": "^1.3.7",
     "mint-ui": "^2.2.7",
     "moment": "^2.18.1",
